# site/public/API-doc/swagger.yaml
@@ -26,6 +26,77 @@ components:
       bearerFormat: JWT
 
 paths:
+  /register:
+    post:
+      summary: Inscription
+      description: |
+        Utilisez cet endpoint pour vous inscrire. Vous devez fournir votre nom, email et mot de passe dans le corps de la requête.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: "test2"
+                email:
+                  type: string
+                  example: "test2@test.test"
+                password:
+                  type: string
+                  example: "azerty123"
+                password_confirmation:
+                  type: string
+                  example: "azerty123"
+      responses:
+        '200':
+          description: Succès
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    example: "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vbG9jYWxob3N0OjgwMDAvYXBpL3JlZ2lzdGVyIiwiaWF0IjoxNzQ4OTY1MjE2LCJleHAiOjE3NDg5Njg4MTYsIm5iZiI6MTc0ODk2NTIxNiwianRpIjoiajRaTkx6aXFncW1VMTF1NiIsInN1YiI6IjIiLCJwcnYiOiIyM2JkNWM4OTQ5ZjYwMGFkYjM5ZTcwMWM0MDA4NzJkYjdhNTk3NmY3In0.s_WppT2KpXRr0FqvcRu7fTa4zkeicIqB28DnAjFusu0"
+                  user:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                        example: "test2"
+                      email:
+                        type: string
+                        example: "test2@test.test"
+                      updated_at:
+                        type: string
+                        example: "2025-06-03T15:40:16.000000Z"
+                      created_at:
+                        type: string
+                        example: "2025-06-03T15:40:16.000000Z"
+                      id:
+                        type: integer
+                        example: 2
+        422:
+          description: Erreur de validation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "The email has already been taken."
+                  errors:
+                    type: object
+                    additionalProperties:
+                      type: array
+                      items:
+                        type: string
+                        example: "erreur catchée par Laravel."
+
   /login:
     post:
       summary: Authentification
